# medmeet-bot

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  run.bat  run.sh  run_api.py
agent/: rag.py  streamlit_app.py  test_file.py
backend/: main.py
backend/api/: chat.py
backend/db/: mongodb.py
backend/models/: chat.py  responses.py
backend/services/: medical_service.py
